Java 9, Java 9; won't you stay fixed this time?