@@ -2,19 +2,18 @@ plugins {
     id 'java'
     id 'application'
     id 'maven-publish'
-    
+
     id 'nebula.release' version '9.2.0'
     id 'org.ajoberstar.grgit' version '3.0.0'
 }
 
 
-group                     = 'dbazile'
+group = 'dbazile'
 
-mainClassName             = 'dbazile.Main'
-applicationDefaultJvmArgs = ['--add-modules=java.xml.bind']
+mainClassName = 'dbazile.Main'
 
-sourceCompatibility       = 1.9
-targetCompatibility       = 1.9
+sourceCompatibility = 1.9
+targetCompatibility = 1.9
 
 
 dependencies {
@@ -22,6 +21,11 @@ dependencies {
             'org.slf4j:slf4j-api:1.7.25',
             'org.slf4j:slf4j-log4j12:1.7.25',
             'log4j:log4j:1.2.17',
+
+            // JAXB
+            'javax.xml.bind:jaxb-api:2.3.0',
+            'org.glassfish.jaxb:jaxb-runtime:2.3.0.1',
+            'javax.activation:activation:1.1.1',
 
             // JAX-RS + Embedded Jetty
             'org.glassfish.jersey.core:jersey-server:2.27',
@@ -65,11 +69,6 @@ publishing {
 }
 
 
-compileJava {
-    options.compilerArgs = ['--add-modules', 'java.xml.bind']
-}
-
-
 jar {
     manifest.attributes(
         'Implementation-Title':   project.name,
@@ -80,11 +79,6 @@ jar {
         'Build-Timestamp':        new Date(),
         'Git-Commit':             grgit.head().id,
     )
-}
-
-
-javadoc {
-    options.addStringOption('-add-modules', 'java.xml.bind')
 }
 
 
